			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.science.uva.nl/bugzilla/
					--------------------------------------

  * FIXED: handling of cyclic terms in is_list/1, =../2, write/1, sort/2
    and friends. Ulrich Neumerkel.

  * FIXED: properly handle occurs_check=error case in dif/2.
    Ulrich Neumerkel and Tom Schrijvers.

  * MODIFIED: Replaced prompt_alternatives_no_bindings flag with
    prompt_alternatives_on with the values groundness and determinism. 
    Default is determinism.  After discussions on mailinglist,
    comp.lang.prolog and direct by mail.

  * FIXED: Properly handle occurs_check flag in unifiable/3.  Ulrich Neumerkel.

  * MODIFIED: The symbols in the range 128..255 are now considered SOLO
    characters, compatible to the documentation.   Ulrich Neumerkel.

  * FIXED: Various issues read dealing with Unicode and backquoted
    strings.   Ulrich Neumerkel.

  * ADDED: experimental --pldoc[=port] option to start PlDoc before loading
    an application as in "pl --pldoc -s myprogram.pl"

  * ADDED: library(clpfd) by Markus Triska.

  * FIXED: silently accept floats with illegal exponent.  Ulrich Neumerkel.

  * FIXED: Errors of atom_to_term/3.  Ulrich Neumerkel.

  * MODIFIED: Added noprofile declarations for findall, bagof, setof,
    call_cleanup and frieds.  Makes profile output more readable.

  * ENHANCED: Various issues around findall/3, bagof/3 and setof/3.  Not
    yet fully tested.

  * ADDED: findall/4.  Ulrich Neumerkel.

================================
VERSION 5.6.39 (August 08, 2007)
================================

  * FIXED: Windows: handling of //host.domain/path filenames.  Dave Eyers.

  * FIXED: Exception from call(1, a, b).  Ulrich Neumerkel.

  * ENHANCED: Trivial extra check in unify_with_occurs_check/2 to speed up
    a common case.  Ulrich Neumerkel.
