@@ -7,6 +7,8 @@
 					http://gollem.science.uva.nl/bugzilla/
 					--------------------------------------
 
+  * ENHANCED: efficiency of length/2.  Ulrich Neumerkel.
+
   * FIXED: handling of cyclic terms in is_list/1, =../2, write/1, sort/2
     and friends. Ulrich Neumerkel.
 
